src/styles/global.css
@import 'fonts.css';

html {
  -webkit-text-size-adjust: 100%;
}

body {
  box-sizing: border-box;
  font-size: 1vw;
  font-family: 'neuemontrealregular', sans-serif;
  font-weight: 400;
  letter-spacing: -.03vw;
  -webkit-font-smoothing: antialiased;
}

a,
.btn {
  cursor: pointer;
}

.btn {
  @apply relative;
  @apply flex items-center justify-center;
  @apply border border-solid rounded-full;
  @apply px-[2.5em] pb-[.7em] pt-[.8em] xs:pb-[.8em] 
}

.btnText {
  font-family: 'almarena-display-light', sans-serif;
  @apply text-[.875em];
  @apply leading-none;
  @apply uppercase;
}

.btnWrapper {
  @apply flex flex-col justify-start items-center;
  @apply h-[.875em];
  @apply overflow-hidden;
}

.contain {
  @apply flex flex-col;
  @apply mx-auto;
  @apply w-full;
}

.heroBtm {
  grid-template-rows: auto !important;
  @apply items-end;
}

.heroGrid {
  @apply w-full;
  @apply grid;
  @apply gap-x-0;
  @apply gap-y-5 xs:gap-y-[3vw] md:gap-y-0;
  @apply grid-flow-row;
  @apply auto-cols-[1fr];
  @apply items-center;
  @apply justify-items-start;
  @apply justify-between;
  
  /* grid templates by breakpoint */
  grid-template-rows: auto auto auto;
  @apply md:grid-rows-[auto];

  grid-template-columns: 60% max-content;
  @apply md:grid-cols-[30%_26%_minmax(max-content,27%)_minmax(14%,max-content)];
  @apply lg:grid-cols-[33%_26%_minmax(max-content,27%)_minmax(14%,max-content)];
}

.heroHeading {
  font-family: 'almarena-display-light', sans-serif;
  @apply text-[8vw] xs:text-[3em];
  @apply font-light;
  @apply leading-[.95];
  @apply mt-0 mb-[1rem];
  @apply max-w-[40vmax] md:max-w-[36vw] lg:max-w-[8em];
}

.heroLocation {
  @apply text-[1em];
  @apply leading-[1.15];
  
  /* grid spans by breakpoint */
  @apply col-start-1 col-end-1;
  @apply row-start-1 row-end-1;
  @apply md:col-start-3 md:col-end-4;
  @apply md:row-start-1 md:row-end-2;
}

.heroP {
  @apply block;
  @apply leading-[1.2];
  @apply max-w-[20em];
  @apply mt-0 mb-[5rem] md:mb-[2.5rem];
  @apply text-[3.5vw] xs:text-[1.15em];
}

.heroText {
  grid-template-rows: auto !important;
  @apply mt-[auto] md:mt-0;
}

.heroTextWrapper {
  @apply flex flex-col items-start;

  /* grid span by breakpoints */
  @apply col-start-1 col-end-1;
  @apply row-start-1 row-end-1;
  @apply md:col-start-3 md:col-end-5;
  @apply md:row-end-2;
  @apply lg:col-end-4;
}

.heroSocials {
  @apply hidden md:grid;
  grid-template-rows: auto;
  grid-template-columns: max-content max-content max-content;
  @apply auto-cols-fr;
  @apply gap-x-[2rem];
  @apply gap-y-[16px];
  @apply uppercase;
}

.heroVer {
  @apply col-start-4 col-end-5;
  @apply text-[1em];
  @apply justify-self-end
}

.isCV {
  @apply hidden md:block;
  @apply sm:mb-[3em] md:mb-[1.125em];
}

.isTop {
  @apply mb-[1.125em];
}

.isNav {
  @apply px-[2.5em];
}

.navItem1 {
  @apply col-start-1 col-end-1 row-start-1 row-end-1;
}

.navItem2 {
  @apply justify-self-start;
  @apply col-start-[span_1] col-end-[span_1];
  @apply row-start-[span_1] row-end-[span_1];
}

.navItem3 {
  @apply justify-self-start;
  /* grid span by breakpoints */
  @apply col-start-2 col-end-3;
  @apply row-start-2 row-end-3;
  @apply md:col-start-[span_1] md:col-end-[span_1];
  @apply md:row-start-[span_1] md:row-end-[span_1];
}

.navItem4 {
  @apply justify-self-start md:justify-self-end;
  /* grid span by breakpoints */
  @apply col-start-2 col-end-3;
  @apply row-start-3 row-end-4;
  @apply md:col-start-[span_1] md:col-end-[span_1];
  @apply md:row-start-[span_1] md:row-end-[span_1];
}

.almarena {
  font-family: 'almarena-display-light', sans-serif;
}

.neueHaas {
  font-family: 'neue-haas-light', sans-serif;
  @apply text-[1em];
}

.logo {
  font-family: 'almarena-display-light', sans-serif;
  @apply text-[1.33em];
}

.lessPadding {
  @apply px-[4vw] xs:px-[3vw];
}

.min12Font {
  @apply text-[12px] xl:text-[1vw];
}

.morePadding {
  @apply px-[4vw] xs:px-[5.75vw] sm:px-[7.5vw] lg:px-[11.75vw] 2xl:px-[16vw];
}

.smallCaps {
  @apply text-[9px] xs:text-[12px] lg:text-[.85em];
  @apply leading-[1.2];
  @apply uppercase;
}

p {
  font-family: 'neue-haas-light', sans-serif;
  letter-spacing: normal;
  @apply text-[16px] 2xl:text-[1.3em];
}

.hero {
  @apply relative;
  @apply flex;
  
  @apply w-full xs:w-auto;
  @apply min-w-[100vw] xs:min-w-0;
  @apply min-h-screen;

  @apply bg-[#3864c5];
  @apply text-[#f4f4f4];

  @apply py-[1.5rem] md:pt-[3em] md:pb-[2em];
  @apply z-[2];
}

